--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-stage-0": "^7.8.3",
     "@babel/register": "^7.12.13",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
